--- a/OMSUI/Views/MainWindow.xaml
+++ b/OMSUI/Views/MainWindow.xaml
@@ -39,14 +39,7 @@
             </StackPanel>
 
             <!--Menu-->
-            <Border CornerRadius="25" Grid.RowSpan="2">
-                <Border.Background>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#75D2B2" Offset="0"/>
-                        <GradientStop Color="#66CDAA" Offset="0.8"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-
+            <Border Style="{StaticResource menuBorder}" Grid.RowSpan="2">
                 <StackPanel >
                     <!--Logo-->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 30 0 40">
