--- a/OMSUI/Views/NewOrderView.xaml
+++ b/OMSUI/Views/NewOrderView.xaml
@@ -24,65 +24,66 @@
 
 
         <Border Style="{StaticResource whiteBorder}" Margin="15 0 15 7">
-            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" 
-              ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-              CellStyle="{DynamicResource DataGridCellStyle1}" 
-              Style="{DynamicResource DataGridStyle1}"
-              ItemsSource="{Binding ProductsView, UpdateSourceTrigger=PropertyChanged}"
-              SelectedItem="{Binding SelectedProduct, UpdateSourceTrigger=PropertyChanged}"
-              VerticalAlignment="Stretch"
-                AutoGenerateColumns="false">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="No." IsReadOnly="True" CanUserResize="False" Width="auto" 
+            <ScrollViewer VerticalScrollBarVisibility="auto">
+                <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" 
+                          ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                          CellStyle="{DynamicResource DataGridCellStyle1}" 
+                          Style="{DynamicResource DataGridStyle1}"
+                          ItemsSource="{Binding ProductsCollectionView, UpdateSourceTrigger=PropertyChanged}"
+                          SelectedItem="{Binding SelectedProduct, UpdateSourceTrigger=PropertyChanged}"
+                          VerticalAlignment="Stretch">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="No." IsReadOnly="True" CanUserResize="False" Width="auto" 
                                 Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}"/>
-                    <DataGridTextColumn Header="Name" IsReadOnly="True" Width="*"
+                        <DataGridTextColumn Header="Name" IsReadOnly="True" Width="*"
                                 Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                    <DataGridTextColumn Header="Starting Price" IsReadOnly="True" Width="*"
-                                Binding="{Binding Price, StringFormat={}{0:C0}, UpdateSourceTrigger=PropertyChanged}"/>
-                    <DataGridTemplateColumn Header="Size" Width="*">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <ComboBox ItemsSource="{Binding SizeOptions, UpdateSourceTrigger=PropertyChanged}"
+                        <DataGridTextColumn Header="Starting Price" IsReadOnly="True" Width="*"
+                                Binding="{Binding Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"/>
+                        <DataGridTemplateColumn Header="Size" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox ItemsSource="{Binding SizeOptions, UpdateSourceTrigger=PropertyChanged}"
                                           SelectedItem="{Binding Size, UpdateSourceTrigger=PropertyChanged}"
                                           Style="{DynamicResource ComboBox}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="Taste" Width="*">                        
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <ComboBox ItemsSource="{Binding TasteOptions, UpdateSourceTrigger=PropertyChanged}"
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn Header="Taste" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox ItemsSource="{Binding TasteOptions, UpdateSourceTrigger=PropertyChanged}"
                                           SelectedItem="{Binding Taste, UpdateSourceTrigger=PropertyChanged}"
                                           Style="{DynamicResource ComboBox}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="Add" IsReadOnly="True" Width="auto">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Background="Transparent" BorderThickness="0"
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn Header="Add" IsReadOnly="True" Width="auto">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Background="Transparent" BorderThickness="0"
                                         Style="{DynamicResource gridAddButton}"
                                         Command="{Binding DataContext.AddProductToOrderCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                         CommandParameter="{Binding}">
-                                    <Icon:PackIconMaterial Kind="PlusCircleOutline" Foreground="#222528"/>
-                                </Button>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                </DataGrid.Columns>
-            </DataGrid>
+                                        <Icon:PackIconMaterial Kind="PlusCircleOutline" Foreground="#222528"/>
+                                    </Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </ScrollViewer>
         </Border>
 
         <Border Grid.Row="1" Style="{StaticResource whiteBorder}" Margin="15 7 15 7">
@@ -156,10 +157,10 @@
                     </Grid.ColumnDefinitions>
                     <!-- Customer section -->
                     <StackPanel VerticalAlignment="Center" Margin="15">
-                        <TextBlock Text="FirstName" FontWeight="Medium" FontSize="11"/>
-                        <!-- {Binding SelectedCustomer.FirstName, UpdateSourceTrigger=PropertyChanged}"-->
-                        <TextBlock Text="PhoneNumber" FontWeight="Medium" FontSize="11"/>
-                        <!-- {Binding SelectedCustomer.PhoneNumber, UpdateSourceTrigger=PropertyChanged}" -->
+                        <TextBlock Text="{Binding SelectedCustomer.FirstName, UpdateSourceTrigger=PropertyChanged}" 
+                                   FontWeight="Medium" FontSize="11"/>
+                        <TextBlock Text="{Binding SelectedCustomer.PhoneNumber, UpdateSourceTrigger=PropertyChanged}" 
+                                   FontWeight="Medium" FontSize="11"/>
                     </StackPanel>
                     <Button Grid.Column="1" 
                                 HorizontalAlignment="Right" 
@@ -188,12 +189,13 @@
                                     <!-- Product Name -->
                                     <TextBlock Text="{Binding Product.Name, UpdateSourceTrigger=PropertyChanged}" FontWeight="Light" FontSize="16"/>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{Binding Taste.Name, UpdateSourceTrigger=PropertyChanged}" FontWeight="Light"/>
-                                        <TextBlock Text="{Binding Size.Name, UpdateSourceTrigger=PropertyChanged}" FontWeight="Light"/>
+                                        <TextBlock Text="{Binding Size, UpdateSourceTrigger=PropertyChanged}" FontWeight="Light"/>
+                                        <TextBlock Text=" - " FontWeight="Light"/>
+                                        <TextBlock Text="{Binding Taste, UpdateSourceTrigger=PropertyChanged}" FontWeight="Light"/>
                                     </StackPanel>
 
                                     <Grid>
-                                        <TextBlock Text="{Binding Price, StringFormat={}{0:C0}, UpdateSourceTrigger=PropertyChanged}" 
+                                        <TextBlock Text="{Binding Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}" 
                                                FontSize="14"
                                                Margin="0,3,0,3"/>
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
@@ -236,19 +238,19 @@
                     <StackPanel HorizontalAlignment="Left">
                         <TextBlock Text="Discount" FontSize="12" FontWeight="Regular"/>
                         <TextBlock Text="Subtotal" FontSize="12" FontWeight="Regular" Margin="0 5 0 0"/>
-                        <TextBlock Text="Payable Amount" FontSize="14" FontWeight="Medium" Margin="0 10 0 0"/>
+                        <TextBlock Text="Total" FontSize="14" FontWeight="Medium" Margin="0 10 0 0"/>
                         <TextBlock Text="Outstanding" FontSize="12" FontWeight="Medium" Margin="0 10 0 0" />
                     </StackPanel>
 
-                    <StackPanel Grid.Column="1" HorizontalAlignment="Right">
-                        <TextBlock Text="{Binding DiscountTotal, UpdateSourceTrigger=PropertyChanged}"
-                                   FontSize="12" FontWeight="Regular"/>
-                        <TextBlock Text="{Binding Subtotal, UpdateSourceTrigger=PropertyChanged}"
-                                   FontSize="12" FontWeight="Regular" Margin="0 5 0 0"/>
-                        <TextBlock Text="{Binding RunningTotal, UpdateSourceTrigger=PropertyChanged}"
-                                   FontSize="14" FontWeight="Medium" VerticalAlignment="Bottom" Margin="0 10 0 0" />
-                        <TextBlock Text="{Binding OutstandingAmount, UpdateSourceTrigger=PropertyChanged}"
-                                   FontSize="12" FontWeight="Medium" VerticalAlignment="Bottom" Margin="0 10 0 0" />
+                    <StackPanel Grid.Column="1">
+                        <TextBlock Text="{Binding DiscountTotal, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="12" FontWeight="Regular" HorizontalAlignment="Right"/>
+                        <TextBlock Text="{Binding Subtotal, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="12" FontWeight="Regular" Margin="0 5 0 0" HorizontalAlignment="Right"/>
+                        <TextBlock Text="{Binding RunningTotal, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="14" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 10 0 0"/>
+                        <TextBlock Text="{Binding OutstandingAmount, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="12" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 10 0 0" />
                     </StackPanel>
                 </Grid>
             </Border>
