--- a/OMSUI/Views/ProductsView.xaml
+++ b/OMSUI/Views/ProductsView.xaml
@@ -3,78 +3,112 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
+             xmlns:local="clr-namespace:OrderManagerDesktopUI.Views" 
+             xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="70*"/>
+            <ColumnDefinition Width="30*"/>
         </Grid.ColumnDefinitions>
 
-        <!-- VENSTRE: LISTE + FILTER -->
-        <Border Grid.Column="0" 
+        <Border Grid.Column="0"
                 Style="{StaticResource whiteBorder}" 
                 Margin="15 0 7 0">
-            <StackPanel Margin="10">
-                <!-- Filter -->
-                <TextBlock Text="Filter by name:" 
-                           FontSize="16" 
-                           Margin="0 0 0 5"/>
-                <TextBox Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}"
-                         Width="200"
-                         Margin="0 0 0 10"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*" />
+                    <RowDefinition Height="10*" />
+                    <RowDefinition Height="80*" />
+                </Grid.RowDefinitions>
 
-                <!-- Liste med produkter -->
-                <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" 
+                <!-- Search field that filters product list -->
+                <StackPanel Grid.Row="0" 
+                            Orientation="Horizontal" 
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                    <TextBlock Text="Search product (id, name, description)" 
+                               FontSize="11"
+                               Margin="10"/>
+                    <TextBox Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"
+                             VerticalContentAlignment="Center"
+                             Width="200"
+                             Height="30"/>
+                </StackPanel>
+
+                <TextBlock Grid.Row="1" 
+                           Text="Products"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Center"
+                           FontSize="20"
+                           Margin="10 0 0 20"/>
+
+                <!-- List of products -->
+                <ScrollViewer VerticalScrollBarVisibility="auto"
+                              Grid.Row="2">
+                    <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" 
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                           Style="{DynamicResource DataGridStyle1}"
-                          ItemsSource="{Binding ProductsView, UpdateSourceTrigger=PropertyChanged}"
+                          ItemsSource="{Binding ProductsCollectionView, UpdateSourceTrigger=PropertyChanged}"
                           SelectedItem="{Binding SelectedProduct, UpdateSourceTrigger=PropertyChanged}"
-                           AutoGenerateColumns="false">        
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="#" IsReadOnly="True" CanUserResize="False" Width="auto" 
+                          HorizontalAlignment="Stretch">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="#" IsReadOnly="True" Width="auto" 
                                 Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}"/>
-                        <DataGridTextColumn Header="Name" IsReadOnly="True" Width="*"
+                            <DataGridTextColumn Header="Name" IsReadOnly="True" Width="*"
                                 Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                        <DataGridTextColumn Header="Description" IsReadOnly="True" Width="*"
-                                Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                        <DataGridTextColumn Header="Price" IsReadOnly="True" Width="*"
-                                Binding="{Binding Price, StringFormat={}{0:C0}, UpdateSourceTrigger=PropertyChanged}"/>
-                        <DataGridTemplateColumn Header="Size Options" Width="*">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <ComboBox ItemsSource="{Binding SizeOptions}"
+                            <DataGridTextColumn Header="Description" IsReadOnly="True" Width="*"
+                                Binding="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridTextColumn Header="Price" IsReadOnly="True" Width="*"
+                                Binding="{Binding Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridTemplateColumn Header="Size Options" Width="auto">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <ComboBox ItemsSource="{Binding SizeOptions}"
                                               Style="{DynamicResource ComboBox}"
                                               SelectedIndex="0">
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
-                                    </ComboBox>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>                           
-                        </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="Taste Options" Width="*">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <ComboBox ItemsSource="{Binding TasteOptions}"
+                                            <ComboBox.ItemTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
+                                                </DataTemplate>
+                                            </ComboBox.ItemTemplate>
+                                        </ComboBox>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Taste Options" Width="auto">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <ComboBox ItemsSource="{Binding TasteOptions}"
                                               Style="{DynamicResource ComboBox}"
                                               SelectedIndex="0">
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
-                                    </ComboBox>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </StackPanel>
+                                            <ComboBox.ItemTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
+                                                </DataTemplate>
+                                            </ComboBox.ItemTemplate>
+                                        </ComboBox>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Delete" IsReadOnly="True" Width="auto">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Background="Transparent" BorderThickness="0"
+                                                Style="{DynamicResource gridAddButton}"
+                                                Command="{Binding DataContext.DeleteProductCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                                CommandParameter="{Binding}">
+                                            <Icon:PackIconMaterial Kind="Delete" Foreground="#222528" />
+                                        </Button>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </ScrollViewer>
+            </Grid>
         </Border>
 
         <!-- HØJRE: CREATE + EDIT -->
@@ -94,20 +128,20 @@
                            Margin="0 0 0 10"/>
 
                     <TextBlock Text="Name"/>
-                    <TextBox Text="{Binding NewName, UpdateSourceTrigger=PropertyChanged}"
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
                          Margin="0 0 0 5"/>
 
                     <TextBlock Text="Description"/>
-                    <TextBox Text="{Binding NewDescription, UpdateSourceTrigger=PropertyChanged}"
+                    <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"
                          Margin="0 0 0 5"/>
 
                     <TextBlock Text="Price"/>
-                    <TextBox Text="{Binding NewPrice, UpdateSourceTrigger=PropertyChanged}"
+                    <TextBox Text="{Binding Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
                          Margin="0 0 0 10"/>
 
                     <Button Content="Create"
                         Style="{StaticResource addButton}"
-                        Command="{Binding CreateCommand}"
+                        Command="{Binding CreateProductCommand}"
                         Margin="0 0 0 10"/>
                 </StackPanel>
             </Border>
@@ -130,24 +164,14 @@
                          Margin="0 0 0 5"/>
 
                     <TextBlock Text="Price"/>
-                    <TextBox Text="{Binding SelectedProduct.Price, UpdateSourceTrigger=PropertyChanged}"
+                    <TextBox Text="{Binding SelectedProduct.Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
                          Margin="0 0 0 10"/>
 
-                    <StackPanel Orientation="Horizontal"
-                            HorizontalAlignment="Center"
-                            Margin="0 10 0 0">
-                        <Button Content="Update"
+                    <Button Content="Update"
                             Width="100"
                             Margin="5"
                             Style="{StaticResource addButton}"
-                            Command="{Binding UpdateCommand}"/>
-
-                        <Button Content="Delete"
-                            Width="100"
-                            Margin="5"
-                            Style="{StaticResource addButton}"
-                            Command="{Binding DeleteCommand}"/>
-                    </StackPanel>
+                            Command="{Binding UpdateProductCommand}"/>
                 </StackPanel>
             </Border>
         </Grid>
