--- a/OMSUI/Views/NoteView.xaml
+++ b/OMSUI/Views/NoteView.xaml
@@ -7,7 +7,16 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:NewOrderView}}">
-        <TextBox Grid.Row=" 0" Grid.Column=" 0" Text="{Binding DataContext.NoteText, UpdateSourceTrigger=PropertyChanged}" 
-                     TextWrapping="Wrap" AcceptsReturn="True"/>
+        <Grid Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  >
+            <!-- overlay with hint text -->
+            <TextBlock Margin="5,2" MinWidth="50" FontSize="14" Text="Write a note here..." 
+                       Visibility="{Binding ElementName=txtNoteBox, Path=Text.IsEmpty, Converter={StaticResource MyBoolToVisibilityConverter}}" 
+                       IsHitTestVisible="False" />
+            <!-- enter term here -->
+            <TextBox Text="{Binding DataContext.NoteContent, UpdateSourceTrigger=PropertyChanged}" 
+                     BorderThickness="0" FontSize="14"
+                     TextWrapping="Wrap" AcceptsReturn="True" MinWidth="50" Name="txtNoteBox" Background="Transparent" />
+        </Grid>
+
     </Grid>
 </UserControl>
